--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   border:none;
   color:#fff;
   font-weight: 600;
+  display: flex;
   padding:0.9em;
   border-radius:0.5em;
 }
@@ -43,4 +44,5 @@ body {
 .content input{
   border:none;
   border-bottom: 1px solid #86aaff;
+  display: flex;
 }
